@@ -1,0 +1,13 @@
+# $NetBSD: Makefile,v 1.1.1.1 2004/11/05 21:01:46 jdolecek Exp $
+
+MODNAME=		dbx
+CATEGORIES+=		databases
+PKGREVISION=		# empty
+COMMENT=		PHP database abstraction layer extension
+
+MAINTAINER=		jdolecek@NetBSD.org
+
+USE_BUILDLINK3=		yes
+
+.include "../../lang/php/ext.mk"
+.include "../../mk/bsd.pkg.mk"
